@startuml DdC_1Iteracion

hide circle
hide empty members



class Mundo{}
class Universidad{}
class Persona{}
class Ascensor{}
class Planta{}

Mundo "1" -- "0..*" Persona
Mundo "1" -- "1" Universidad

Universidad "1" -- "1..*" Planta
Universidad "1" -- "0..*" Persona
Universidad "1" ------ "1..*" Ascensor

Persona "0..*" -- "0..1" Ascensor
Ascensor "1" -- "2..*" Planta

Persona "0..*" -- "1" Planta

@enduml